# Findodo

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  test_docling_run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
conf/: config.yaml
conf/chunker/: token.yaml
conf/parser/: docling.yaml  pdf.yaml  sec.yaml
conf/prompt/: default.yaml
conf/provider/: openai.yaml
src/findodo/: __init__.py  config.py  generator.py  main.py  models.py  prompts.py  types.py
src/findodo/core/: __init__.py  parsing.py  providing.py
src/findodo/parsers/: chunker.py  docling.py  pdf.py  sec.py
src/findodo/providers/: base.py  openai.py
tests/: test_config.py  test_hydra_config.py  test_mlflow_integration.py
tests/core/: test_generator.py
tests/parsers/: test_chunker.py
tests/providers/: test_openai_provider.py
